--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
                 <li class="nav-item"><a href="#process" class="nav-link">How It Works</a></li>
                 <li class="nav-item"><a href="#pricing" class="nav-link">Pricing</a></li>
+                <li class="nav-item" id="auth-nav-item"><a href="/login" class="nav-link">Login</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link btn-primary">Book Now</a></li>
             </ul>
         </div>
