--- a/register.html
+++ b/register.html
@@ -78,6 +78,9 @@
         </div>
     </div>
 
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
     <script src="js/api.js"></script>
     <script src="js/auth.js"></script>
 </body>
