Update contact info to placeholders

--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
                 <h2>Ready for Fresh Clothes?</h2>
                 <p>Contact us today or visit our store.</p>
                 <div class="contact-info">
-                    <div class="item"><i class="fa-solid fa-phone"></i> 08066374570</div>
-                    <div class="item"><i class="fa-solid fa-envelope"></i> johnjasper0804@gmail.com</div>
-                    <div class="item"><i class="fa-solid fa-location-dot"></i> Road 3, Matt Estate, Odo Eran</div>
+                    <div class="item"><i class="fa-solid fa-phone"></i> +1 (555) 123-4567</div>
+                    <div class="item"><i class="fa-solid fa-envelope"></i> hello@sparkleslaundry.com</div>
+                    <div class="item"><i class="fa-solid fa-location-dot"></i> 123 Clean Street, Laundry City</div>
                 </div>
-                <a href="mailto:johnjasper0804@gmail.com" class="btn btn-lg btn-white">Contact Us Now</a>
+                <a href="mailto:hello@sparkleslaundry.com" class="btn btn-lg btn-white">Contact Us Now</a>
             </div>
         </div>
     </section>
