--- a/dashboard.html
+++ b/dashboard.html
@@ -27,7 +27,8 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="/dashboard" class="nav-link active">Dashboard</a></li>
+                <li class="nav-item" id="dashboard-nav-item"><a href="/dashboard" class="nav-link active">Dashboard</a>
+                </li>
                 <li class="nav-item"><a href="#" class="nav-link" id="logout-btn">Logout</a></li>
             </ul>
         </div>
