Convert system to NGN currency with Paystack fix

--- a/dashboard.html
+++ b/dashboard.html
@@ -78,7 +78,7 @@
                         <i class="fa-solid fa-dollar-sign" style="color: #7b1fa2;"></i>
                     </div>
                     <div class="stat-content">
-                        <h3 id="total-spent">$0</h3>
+                        <h3 id="total-spent">\u20a60</h3>
                         <p>Total Spent</p>
                     </div>
                 </div>
