--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="pricing-grid">
                 <div class="card pricing-card fade-in-up">
                     <h3>Wash & Fold</h3>
-                    <div class="price">$1.50<span>/lb</span></div>
+                    <div class="price">₦300<span>/item</span></div>
                     <ul class="features">
                         <li><i class="fa-solid fa-check"></i> Whites & Colors Separated</li>
                         <li><i class="fa-solid fa-check"></i> Premium Detergent</li>
@@ -159,7 +159,7 @@
                 <div class="card pricing-card popular fade-in-up delay-1">
                     <div class="badge">Most Popular</div>
                     <h3>Dry Cleaning</h3>
-                    <div class="price">$5.00<span>/item</span></div>
+                    <div class="price">₦1,000<span>/item</span></div>
                     <p class="sub-text">(Starting Price)</p>
                     <ul class="features">
                         <li><i class="fa-solid fa-check"></i> Expert Stain Treatment</li>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="card pricing-card fade-in-up delay-2">
                     <h3>Comforters</h3>
-                    <div class="price">$25.00<span>/ea</span></div>
+                    <div class="price">₦3,000<span>/ea</span></div>
                     <ul class="features">
                         <li><i class="fa-solid fa-check"></i> Deep Clean</li>
                         <li><i class="fa-solid fa-check"></i> Hypoallergenic Options</li>
