--- a/order.html
+++ b/order.html
@@ -54,17 +54,17 @@
                             <div class="service-option" data-service="wash-fold">
                                 <i class="fa-solid fa-shirt"></i>
                                 <h3>Wash & Fold</h3>
-                                <p>$1.50/lb</p>
+                                <p>₦300/item</p>
                             </div>
                             <div class="service-option" data-service="dry-clean">
                                 <i class="fa-solid fa-user-tie"></i>
                                 <h3>Dry Cleaning</h3>
-                                <p>From $5.00/item</p>
+                                <p>From ₦800/item</p>
                             </div>
                             <div class="service-option" data-service="comforter">
                                 <i class="fa-solid fa-bed"></i>
                                 <h3>Comforters</h3>
-                                <p>From $20.00/item</p>
+                                <p>From ₦2,500/item</p>
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                             </div>
                             <div class="summary-total">
                                 <h3>Total:</h3>
-                                <h3 id="total-price">$0.00</h3>
+                                <h3 id="total-price">₦0</h3>
                             </div>
                             <button id="submit-order-btn" class="btn btn-primary btn-block" disabled>
                                 <i class="fa-solid fa-check"></i> Place Order
